crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_azure.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: config
---
storage_type: Azure
bucket: my-container
base_path: releases/v1
