crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_default.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: "CloudStorageConfig::default()"
---
storage_type: File
bucket: ""
base_path: ""
