crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_full_path_variants.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: results
---
- - prefix
  - state.json
  - prefix/state.json
- - prefix/
  - state.json
  - prefix/state.json
- - ""
  - state.json
  - state.json
- - a/b/c
  - d.json
  - a/b/c/d.json
