crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_gcs.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: config
---
storage_type: Gcs
bucket: gcs-bucket
region: us-central1
base_path: ""
