crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_minimal_file.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: config
---
storage_type: File
bucket: ""
base_path: ".shipper"
