crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__cloud_config_validate_errors.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: cases
---
- - s3_empty_bucket
  - bucket/container name is required for cloud storage
- - gcs_empty_bucket
  - bucket/container name is required for cloud storage
- - azure_empty_bucket
  - bucket/container name is required for cloud storage
