crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__json_output.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: json
---
"{\n  \"storage_type\": \"S3\",\n  \"bucket\": \"my-bucket\",\n  \"region\": \"ap-southeast-1\",\n  \"base_path\": \"releases\"\n}"
