crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__parsed_back.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: parsed
---
storage_type: S3
bucket: my-bucket
region: ap-southeast-1
base_path: releases
