crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__snapshot_debug_cloud_config_defaults.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: "CloudStorageConfig::default()"
---
CloudStorageConfig {
    storage_type: File,
    bucket: "",
    region: None,
    base_path: "",
    endpoint: None,
    access_key_id: None,
    secret_access_key: None,
    session_token: None,
}
