crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__snapshot_debug_storage_type_all.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: types
---
[
    File,
    S3,
    Gcs,
    Azure,
]
